# actix_web_sample

./: README.md
google_auth/: Cargo.toml  README.md
google_auth/src/: constants.rs  error.rs  main.rs
google_auth/src/api/: google.rs
google_auth/src/utils/: google_auth.rs
jwt_auth/: Cargo.toml  README.md
jwt_auth/src/: constants.rs  error.rs  main.rs
jwt_auth/src/api/: token.rs
jwt_auth/src/model/: token.rs
jwt_auth/src/utils/: token.rs
jwt_user_auth/: Cargo.toml  README.md
jwt_user_auth/src/: constants.rs  error.rs  main.rs
jwt_user_auth/src/api/: token.rs  user.rs
jwt_user_auth/src/model/: user.rs
jwt_user_auth/src/repository/: mdb.rs
jwt_user_auth/src/utils/: token.rs
mongodb/: Cargo.toml  README.md
mongodb/src/: main.rs
mongodb/src/api/: user.rs
mongodb/src/model/: user.rs
mongodb/src/repository/: ddb.rs  mdb.rs
static_json/: Cargo.toml  README.md
static_json/data/: user_list.json
static_json/src/: main.rs
todo_app/: Cargo.toml  README.md
todo_app/src/: constants.rs  error.rs  main.rs
todo_app/src/api/: google.rs  mod.rs  todo.rs  token.rs  user.rs
todo_app/src/middleware/: auth_middleware.rs
todo_app/src/model/: mod.rs  todo.rs  token.rs  user.rs
todo_app/src/repository/: mdb.rs  todo.rs  user.rs
todo_app/src/utils/: mod.rs  token.rs
