[package]
name = "google_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "^2"
serde = { version = "1.0", features = ["derive"] }
actix-web = "^4"
openidconnect = "^3"
url = "^2"
derive_more = "0.99.17"
