[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
actix-web-httpauth = "*"
jwt-simple = "0.10"
rust-crypto = "0.2"
derive_more = "0.99.17"
chrono = "0.4.31"
bcrypt = "0.15.0"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]